--- a/app/views/subs/_form.html.erb
+++ b/app/views/subs/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @sub do |f| %>
-  <%= f.label :department %>
-  <%= f.text_field :items, required: true, autofocus: true %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
   <br />
   <%= f.submit %>
 <% end %>
