--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -6,3 +6,5 @@
 <%= link_to 'Edit Department', edit_sub_path(@sub) %>
 <br />
 <%= link_to 'Delete Department', @sub, method: :delete %>
+<br />
+<%= link_to 'Back to Departments', root_path %>
