--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,8 @@
-<h1><%= @sub.name %> - <%= @item.name %></h1>
+<h1><%= @item.name %></h1>
 
-<%= link_to 'Edit item', edit_sub_item_path([@sub, @item]) %>
-<%= link_to 'Delete item', [@sub, @item], method: :delete %>
-<%= link_to 'Back To items', sub_items_path(@sub) %>
+<button class="silver btn-small"><%= link_to 'Edit', edit_sub_item_path([@sub, @item]) %>
+</button>
+<button class="silver btn-small"><%= link_to 'Delete', [@sub, @item], method: :delete  %>
+</button>
+<button class="grey lighten-3 btn-small"><%= link_to 'Back', sub_items_path(@sub) %>
+</button>
